--- a/project2/01_layout.css
+++ b/project2/01_layout.css
@@ -37,6 +37,254 @@ div.box.box-3{
  	position: absolute;
  	padding: 6%;
  	width: 12%;
+ 	height: 12%;
+ 	left:45%;
+ 	margin-top: 15%;
+}
+
+div.box.box-4{
+	background-color: #e89a85;
+	color: white;
+ 	text-align: center;
+ 	position: absolute;
+ 	padding: 8%;
+ 	width: 15%;
+ 	left:63%;
+ 	margin-top: 1%;
+}
+
+div.box.box-5{
+	background-color: #f2d4ce;
+	color: white;
+ 	text-align: center;
+ 	position: absolute;
+ 	padding: 4%;
+ 	width: 14%;
+ 	left:32%;
+ 	margin-top: 30%;
+}
+
+div.box.box-6{
+	background-color: #e36d57;
+	color: white;
+ 	text-align: center;
+ 	vertical-align: middle;
+ 	position: absolute;
+ 	width: 33%;
+ 	left:60%;
+ 	padding-top:10%;
+ 	padding-bottom: 10%;
+ 	margin-top: 30%;
+}
+h3{
+	vertical-align: middle;
+	font-weight: lighter;
+	letter-spacing: 3px;
+}
+
+h1.of{
+	position: absolute;
+	margin-left: 45%;
+	margin-top: 30%;
+	letter-spacing: 20px;
+	font-size: 300%;
+}
+
+h1.name{
+	position: absolute;
+	margin-top: 45%;
+	letter-spacing: 30px;
+}
+
+h1{
+	font-family: Times New Roman;
+	font-weight: lighter;
+	letter-spacing: 40px;
+	font-size: 250%;
+}
+img.box6{
+	position: absolute;
+	width: 60%;
+	left:50%;
+	margin-top: 23%;
+}
+img#spotify{
+	position: absolute;
+	width: 40%;
+	left:50%;
+	margin-top: 10%;
+}
+img.box2{
+	position: absolute;
+	width: 20%;
+	left:10%;
+}
+img#wechat{
+    position:absolute;
+    width:20%;
+    left:60%;
+    margin-top:-100px;
+    right:1000px;
+}
+img#twitter{
+	position:absolute;
+    width:30px;
+    left:60%;
+    margin-top:50px;
+    right:10%;
+}
+img#youtube{
+	position: absolute;
+	width: 40%;
+	left:70%;
+	margin-top: 5%;
+}
+img#google{
+	position: absolute;
+	width: 35%;
+	left:35%;
+}
+img#docs{
+	position: absolute;
+	width: 20%;
+	right: 70%;
+}
+img#slides{
+	position: absolute;
+	width: 20%;
+	right: 45%;
+}
+img#sina{
+	position: absolute;
+	width: 20%;
+
+}
+img#twitter{
+	position: absolute;
+	width: 20%;
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+	h1, h1.name, h1.of{
+		letter-spacing: 0px;
+	}
+	body{
+		margin-top: 250px;
+	}
+	div.box{
+		margin-top: 300px;
+	}
+	div.box.box-6{
+		margin-top: 50%;
+	}
+	img.box6{
+		margin-top: 60px;
+	}
+	h1.of{
+		margin-top: 250px;
+		margin-left: 250px;
+	}
+	img#wechat{
+		margin-top: 100px;
+	}
+	img#youtube{
+		margin-top: 50px;
+	}
+	h3.h3{
+		margin-left: -22px;
+		font-size: 15px;
+	}
+	div.box.box-3{
+		margin-left: 30px;
+	}
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+	body{
+		margin-top: 100px;
+	}
+
+	h1{
+		letter-spacing: 15px;
+	}
+	img#wechat{
+		margin-top: 10px;
+		margin-left:50px; 
+
+	}
+ 	div.box.box-6{
+		margin-top: 40%; 
+	}
+	h1.of{
+		margin-top: 100px;
+	}
+	h3.h3{
+		margin-left: -10px;
+	}
+	img#youtube{
+		margin-top: 25px;
+	}
+
+}
+
+/* Large devices (laptops/desktops, 1025px and up) */
+@media only screen and (min-width: 1025px) {
+	div.box.box-6{
+		margin-top: 33%; 
+	}
+	img#wechat{
+		margin-top: 1px;
+		margin-left:50px; 
+
+	}
+}
+
+/* Extra large devices (large laptops and desktops, 1400px and up) */
+@media only screen and (min-width: 1400px) {
+	body{
+	margin:10%;
+	font-family: Times New Roman;
+
+}
+
+div.text{
+	position: absolute;
+}
+
+div.box.box-1 {
+	background-color: #e37a67;
+	width: 33.33%;
+	padding-top: 10%;
+	padding-bottom: 10%;
+  	color: white;
+ 	position: absolute;
+ 	text-align: center;
+ 	margin-top: 10%;
+}
+
+div.box.box-2{
+	background-color: #efb7ad;
+	color: white;
+ 	text-align: center;
+ 	position: absolute;
+ 	padding: 5%;
+ 	width: 13%;
+ 	left:30%;
+ 	up:30%;
+}
+
+div.box.box-3{
+	background-color: #e8ab9a;
+	color: white;
+ 	text-align: center;
+ 	position: absolute;
+ 	padding: 6%;
+ 	width: 12%;
+ 	height: 12%;
  	left:45%;
  	margin-top: 15%;
 }
@@ -161,5 +409,7 @@ img#sina{
 img#twitter{
 	position: absolute;
 	width: 20%;
+
+}
 
 }
